# unifi-hamina-live

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.override.example.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
deploy/: unifi-hamina-live.service
docs/: ARCHITECTURE.md  CATALYST.md  EXPOSURE.md  HAMINA.md  MERAKI_COMPAT.md  SYNOLOGY.md
tests/: conftest.py  test_catalyst.py  test_collector_placement.py  test_events.py  test_meraki_api.py  test_neutral_api.py  test_normalize.py  test_placement.py  test_stale.py
unifi_hamina_live/: __init__.py  __main__.py  app.py  config.py  deps.py  models.py
unifi_hamina_live/api/: __init__.py  router.py
unifi_hamina_live/catalyst/: __init__.py  auth.py  mapping.py  maps.py  router.py
unifi_hamina_live/meraki/: __init__.py  mapping.py  router.py
unifi_hamina_live/refresh/: __init__.py  openintent.py  router.py
unifi_hamina_live/unifi/: __init__.py  client.py  collector.py  events.py  normalize.py  placement.py  websocket.py
unifi_hamina_live/web/: dashboard.html
